deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-frontend
  namespace: demo

spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-frontend

  template:
    metadata:
      labels:
        app: demo-frontend
    spec:
      containers:
        - name: demo
          image: cachac/demo-frontend:1
          ports:
            - containerPort: 8080

          resources:
            requests:
              memory: "64Mi"
              cpu: "5m"

            limits:
              memory: "256Mi"
              cpu: "250m"
