ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-frontend-ingress
  namespace: demo

spec:
  ingressClassName: nginx

  rules:
    - host: ivan.kubelabs.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-frontend
                port:
                  number: 8080
